<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp">

    <Button
        android:id="@+id/logInFacebookButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.Button.Facebook"
        android:text="@string/sign_up_continue_with_facebook" />

    <Button
        android:id="@+id/logInGoogleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInFacebookButton"
        android:layout_marginTop="8dp"
        android:theme="@style/AppTheme.Button.Google"
        android:text="@string/sign_up_continue_with_google" />

    <View
        android:id="@+id/lineSeparator1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/labelOr"
        app:layout_constraintTop_toBottomOf="@id/logInGoogleButton"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/labelOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/lineSeparator1"
        app:layout_constraintEnd_toStartOf="@id/lineSeparator2"
        android:text="@string/sign_up_label_or"
        app:layout_constraintTop_toTopOf="@+id/lineSeparator1"
        app:layout_constraintBottom_toBottomOf="@+id/lineSeparator1" />

    <View
        android:id="@+id/lineSeparator2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/labelOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineSeparator1"
        app:layout_constraintBottom_toBottomOf="@+id/lineSeparator1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/labelOr">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/sign_up_hint_email"
          android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/passwordEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/sign_up_hint_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logInEmailButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:theme="@style/AppTheme.Button.LogIn"
        android:layout_marginTop="8dp"
        android:text="@string/log_in_sign_in_with_email" />

    <TextView
        android:id="@+id/notAccountYetLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_not_account_yet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/logInEmailButton" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/log_in_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/notAccountYetLabel"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>