<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
      android:id="@+id/labelTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textSize="22sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:gravity="center_horizontal"
      android:layout_marginTop="24dp"
      android:text="@string/app_name"
      android:textStyle="bold"
      android:textColor="#fff"/>

  <Button
      android:id="@+id/signUpButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/labelTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/logInButton"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_margin="8dp"
      tools:visibility="gone"
      android:theme="@style/AppTheme.Button.Header"
      android:text="@string/main_header_button_sign_up"/>

  <Button
      android:id="@+id/logInButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/labelTextView"
      app:layout_constraintStart_toEndOf="@id/signUpButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="8dp"
      tools:visibility="visible"
      android:theme="@style/AppTheme.Button.Header"
      android:text="@string/main_header_button_log_in"/>

  <TextView
      android:id="@+id/loggedInTextView"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      app:layout_constraintTop_toBottomOf="@id/labelTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:gravity="center"
      app:autoSizeTextType="uniform"
      android:visibility="gone"
      tools:visibility="visible"
      android:paddingTop="16dp"
      android:paddingBottom="16dp"
      android:textColor="#fff"
      android:textSize="18sp"
      tools:text="@string/main_header_label_logged_in"
      tools:ignore="MissingPrefix" />


</android.support.constraint.ConstraintLayout>