<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

  <TextView
      android:id="@+id/holdingsLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/TextAppearanceTransactionsByPair"
      android:layout_marginTop="8dp"
      android:text="@string/transactions_by_pair_holdings"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>


  <TextView
      android:id="@+id/holdingsValueTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/TextAppearanceTransactionsByPair"
      tools:text="$2972.26"
      app:layout_constraintTop_toBottomOf="@id/holdingsLabel"
      app:layout_constraintStart_toStartOf="parent"/>


  <TextView
      android:id="@+id/holdingsQuantityTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/TextAppearanceTransactionsByPair"
      tools:text="0.095 BTC"
      app:layout_constraintTop_toBottomOf="@id/holdingsValueTextView"
      app:layout_constraintStart_toStartOf="parent"/>

  <TextView
      android:id="@+id/priceTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      style="@style/TextAppearanceTransactionsByPair"
      tools:text="1 BTC = $6200"/>

  <TextView
      android:id="@+id/totalProfitsLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/TextAppearanceTransactionsByPair"
      android:text="@string/transactions_by_pair_total_profits"
      app:layout_constraintTop_toBottomOf="@id/priceTextView"
      app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
      android:id="@+id/totalProfitsTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/TextAppearanceTransactionsByPair"
      tools:text="$44.59(6.96%)"
      app:layout_constraintTop_toBottomOf="@id/totalProfitsLabel"
      app:layout_constraintEnd_toEndOf="parent"/>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/labelsConstraintLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/holdingsQuantityTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="4dp"
      android:elevation="2dp"
      android:paddingRight="16dp"
      android:paddingLeft="16dp"
      android:background="@color/colorPrimaryDark"
      tools:targetApi="lollipop">

    <TextView
        android:id="@+id/unitsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:padding="4dp"
        android:textColor="#fff"
        android:text="@string/transactions_by_pair_units"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.28"
        app:layout_constraintStart_toEndOf="@id/unitsLabel"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="4dp"
        android:textColor="#fff"
        android:text="@string/transactions_by_pair_price"/>

    <TextView
        android:id="@+id/investedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.23"
        app:layout_constraintStart_toEndOf="@id/priceLabel"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="4dp"
        android:textColor="#fff"
        android:text="@string/transactions_by_pair_invested"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/profitsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintStart_toEndOf="@id/investedLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:textSize="16sp"
        android:padding="4dp"
        android:textColor="#fff"
        android:text="@string/transactions_by_pair_profits"
        tools:ignore="RtlSymmetry" />

  </android.support.constraint.ConstraintLayout>


  <android.support.v7.widget.RecyclerView
      android:id="@+id/transactionsRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="#fff"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/labelsConstraintLayout"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:listitem="@layout/activity_transactions_by_pair_details_item"
      app:layout_constraintEnd_toEndOf="parent"/>


  <android.support.design.widget.FloatingActionButton
      android:id="@+id/addTransactionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:tint="#fff"
      app:srcCompat="@android:drawable/ic_input_add"
      android:layout_margin="16dp"/>

</android.support.constraint.ConstraintLayout>